--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -78,9 +78,8 @@
       color: mediumspringgreen; 
     }
 
-    @include flex() {
-      align-items: center;
-    }
+    display: inline-flex;
+    align-items: center;
   }
 
   .skills {
